MIPS: add missing implementations of load8SignedExtendTo32()

JSC: missing implementations of MacroAssemblerMIPS::load8SignedExtendTo32()
https://bugs.webkit.org/show_bug.cgi?id=168350

Patch by Guillaume Emont <guijemont@igalia.com> on 2017-02-15
Reviewed by Yusuke Suzuki.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::load8SignedExtendTo32):
Add missing implementations

Canonical link: https://commits.webkit.org/185437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212419 268f45cc-cd09-0410-ab3c-d52691b4dbfc